syntax = "proto3";

message VerifyKey {
  bytes key = 1;
  string name = 2;
  string desc = 3;
  int64 created_at = 4;
  int64 expires_at = 5;
}

message RevokedTox {
  string reason = 1;
  int64 created_at = 2;
}

message VerifyKeys { map<uint32, VerifyKey> m = 1; }

message RevokedToxes { map<string, RevokedTox> m = 1; }